Syntax-Fehler ausbgebessert

--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+        // Hier können Sie Ihre Backend-Verbindung und weitere JavaScript-Code hinzufügen
+    </script>
 </body>
 </html>
